wip， add some translation to app

--- a/lang/id.json
+++ b/lang/id.json
@@ -1,6 +1,10 @@
 {
     "Email": "Emel",
+    "Name": "Nama",
+    "Tel": "Telepon",
+    "Address": "Alamat",
     "Password": "Kata sandi",
+    "Remark": "Keterangan",
     "Welcome": "Selamat datang",
     "System Login": "Login Sistem",
     "Current shop": "Toko saat ini",
@@ -18,9 +22,11 @@
     "New": "Baru",
     "List": "Daftar",
     "Customer": "Pelanggan",
+    "Choose Customer": "Pilih Pelanggan",
+    "Choose": "Pilih",
     "Customer Name": "Nama Pelanggan",
-    "Customer Phone": "Telepon Pelanggan",
-    "Customer Email": "Email Pelanggan",
+    "Customer Tel": "Telepon Pelanggan",
+    "Customer Email": "Emel Pelanggan",
     "Customer Address": "Alamat Pelanggan",
     "Settings": "Pengaturan",
     "Product": "Produk",
@@ -30,5 +36,37 @@
     "Type": "Jenis",
     "Currency": "Mata Uang",
     "Account Code": "Kode Akun",
-    "Exchange Rate": "Tingkat Tukar"
+    "Exchange Rate": "Tingkat Tukar",
+    "The provided credentials do not match our records.": "Kredensial yang diberikan tidak cocok dengan catatan kami",
+    "Profile": "Profil",
+    "Old Password": "Kata Sandi Lama",
+    "New Password": "Kata Sandi Baru",
+    "Confirm Password": "Konfirmasi Kata Sandi",
+    "Password successfully changed.": "Kata sandi berhasil diubah.",
+    "Old password is incorrect.": "Kata sandi lama salah.",
+    "Change Password": "Ubah Kata Sandi",
+    "Are you sure?": "Apakah kamu yakin?",
+    "This data is used in work order, can't be deleted.": "Data ini digunakan dalam pesanan kerja, tidak dapat dihapus.",
+    "Data saved.": "Data tersimpan.",
+    "name, tel, email...": "nama, tel, emel...",
+    "Member Card": "Kartu Anggota",
+    "Edit": "Edit",
+    "Delete": "Hapus",
+    "Add": "Tambah",
+    "Save": "Simpan",
+    "Cancel": "Batal",
+    "Close": "Tutup",
+    "Yes": "Ya",
+    "No": "Tidak",
+    "Logout": "Keluar",
+    "Data not deleted.": "Data tidak dihapus.",
+    "Data deleted.": "Data dihapus.",
+    "Confirm Work Order": "Konfirmasi Pesanan Kerja",
+    "Work Order Confirmed": "Pesanan Kerja Terverifikasi",
+    "Work order number": "Nomor pesanan kerja",
+    "Basic Information": "Informasi Dasar",
+    "Details": "Detail",
+    "Remove": "Hapus",
+    "New Item": "Barang Baru",
+    "Select Product": "Pilih Produk"
 }
