wip， update some table structure

--- a/lang/id.json
+++ b/lang/id.json
@@ -68,5 +68,30 @@
     "Details": "Detail",
     "Remove": "Hapus",
     "New Item": "Barang Baru",
-    "Select Product": "Pilih Produk"
+    "Select Product": "Pilih Produk",
+    "Barcode": "Barcode",
+    "Unit": "Unit",
+    "Price": "Harga",
+    "Quantity": "Kuantitas",
+    "SubTotal": "SubTotal",
+    "Total": "Total",
+    "Payment": "Pembayaran",
+    "Turnover": "Omset",
+    "Location": "Lokasi",
+    "Please choose a customer": "Silakan pilih pelanggan",
+    "Please add at least one item": "Silakan tambahkan setidaknya satu item",
+    "You can only edit draft work orders.": "Anda hanya dapat mengedit pesanan kerja draf.",
+    "Work Order Items data not deleted.": "Data item pesanan kerja tidak dihapus.",
+    "You can only delete draft work orders created by you.": "Anda hanya dapat menghapus pesanan kerja draf yang dibuat oleh Anda.",
+    "You can only print confirmed work orders.": "Anda hanya dapat mencetak pesanan kerja yang telah dikonfirmasi.",
+    "WO Date": "WO Tanggal",
+    "Cust Name": "Nama Pelanggan",
+    "Cust Tel": "Pelanggan Tel",
+    "Cust Email": "Pelanggan Emel",
+    "Cust Address": "Pelanggan Alamat",
+    "Status": "Status",
+    "Pickup Date": "Tanggal Pickup",
+    "Work Order List": "Daftar Pesanan Kerja",
+    "Print": "Cetak",
+    "Piece": "sekeping"
 }
