wip, try to use https://github.com/johnlauer/serial-port-json-server to print

--- a/lang/id.json
+++ b/lang/id.json
@@ -112,7 +112,11 @@
     "Grand Total": "Keseluruhan Jumlah",
     "Collect Date:": "Tanggal Pengumpulan:",
     "Thank You": "Terima Kasih",
-    "See You Again": "Lihat Anda Lagi",
+    "See You Again": "Sampai Sampai Jumpa Lagi",
     "Powered By:": "Diberdayakan oleh:",
-    "Attention": "Perhatian"
+    "Attention": "Perhatian",
+    "1. Damage/fade/tear/shrinkage of clothing in the washing and drying process caused by the basic nature of the clothing material is not our responsibility, it is the consumer's risk": "1. Kerusakan/luntur/sobek/susut pakaian dalam proses pencucian dan pengeringan yang di sebabkan sifat dasar bahan pakaian bukan menjadi tanggung jawab kami,menjadi resiko konsumen",
+    "2. The loss of valuables left in clothes is not our responsibility.": "2. Hilangnya benda berharga yang tertinggal didalam pakaian,bukan tanggung jawab kami.",
+    "3. If the amount of clothing has been filled in accurately and correctly, then the amount we calculated is considered correct": "3. Bila jumlah pakaian telah di isi dengan tepat dan benar,maka jumlah yang kami hitung dianggap benar",
+    "4. Complaints occur 1x24 hours after the laundry is picked up": "4. Pengaduan/komplain berlaku 1x24 jam setelah cucian diambil"
 }
