wip, add print to websocket to system

--- a/lang/id.json
+++ b/lang/id.json
@@ -9,9 +9,10 @@
     "System Login": "Login Sistem",
     "Current shop": "Toko saat ini",
     "Home": "Beranda",
-    "Ready for customer Pickup": "Siap untuk penjemputan pelanggan",
+    "Ready for Pickup": "Sedia untuk Pickup",
     "In Progress": "Dalam Proses",
     "Today Sales": "Penjualan Hari Ini",
+    "Month Sales": "Penjualan Bulan Ini",
     "New Work Order": "Pesanan Baru",
     "New Customer": "Pelanggan Baru",
     "if the customer is new, please create new customer first": "Jika pelanggan baru, buat pelanggan baru terlebih dahulu",
@@ -84,16 +85,19 @@
     "Work Order Items data not deleted.": "Data item pesanan kerja tidak dihapus.",
     "You can only delete draft work orders created by you.": "Anda hanya dapat menghapus pesanan kerja draf yang dibuat oleh Anda.",
     "You can only print confirmed work orders.": "Anda hanya dapat mencetak pesanan kerja yang telah dikonfirmasi.",
+    "WO No": "WO No",
     "WO Date": "WO Tanggal",
     "Cust Name": "Nama Pelanggan",
     "Cust Tel": "Pelanggan Tel",
     "Cust Email": "Pelanggan Emel",
     "Cust Address": "Pelanggan Alamat",
     "Status": "Status",
+    "Collect": "Kumpulkan",
     "Pickup Date": "Tanggal Pickup",
     "Collect Date": "Tanggal Pengumpulan",
     "Work Order List": "Daftar Pesanan Kerja",
     "Print": "Cetak",
+    "Print Receipt": "Cetak Kwitansi",
     "Piece": "sekeping",
     "Work Order already confirmed": "Pesanan kerja sudah dikonfirmasi",
     "Express": "Ekspres",
@@ -118,5 +122,10 @@
     "1. Damage/fade/tear/shrinkage of clothing in the washing and drying process caused by the basic nature of the clothing material is not our responsibility, it is the consumer's risk": "1. Kerusakan/luntur/sobek/susut pakaian dalam proses pencucian dan pengeringan yang di sebabkan sifat dasar bahan pakaian bukan menjadi tanggung jawab kami,menjadi resiko konsumen",
     "2. The loss of valuables left in clothes is not our responsibility.": "2. Hilangnya benda berharga yang tertinggal didalam pakaian,bukan tanggung jawab kami.",
     "3. If the amount of clothing has been filled in accurately and correctly, then the amount we calculated is considered correct": "3. Bila jumlah pakaian telah di isi dengan tepat dan benar,maka jumlah yang kami hitung dianggap benar",
-    "4. Complaints occur 1x24 hours after the laundry is picked up": "4. Pengaduan/komplain berlaku 1x24 jam setelah cucian diambil"
+    "4. Complaints occur 1x24 hours after the laundry is picked up": "4. Pengaduan/komplain berlaku 1x24 jam setelah cucian diambil",
+    "You can only collect 4pickup work orders.": "Anda hanya dapat mengumpulkan 4 pesanan kerja pickup.",
+    "Work Order Items data did not updated.": "Data item pesanan kerja tidak diperbarui.",
+    "Data updated.": "Data diperbarui.",
+    "Work Order collected , the collection date is today": "Pesanan kerja dikumpulkan, tanggal pengumpulan adalah hari ini",
+    "This job will set to complete, the collect date will set to today, are you sure?": "Pekerjaan ini akan diset ke selesai, tanggal pengumpulan akan diset ke hari ini, apakah anda yakin?"
 }
