--- a/lang/id.json
+++ b/lang/id.json
@@ -35,8 +35,17 @@
     "App Group": "Grup Aplikasi",
     "Division": "Divisi",
     "Type": "Jenis",
+    "Group Name": "Nama Grup",
+    "Select one type": "Pilih satu jenis",
+    "Select one group": "Pilih satu grup",
+    "Select one division": "Pilih satu divisi",
+    "Select one role": "Pilih satu peran",
+    "Select one category": "Pilih satu kategori",
+    "Select one currency": "Pilih satu mata uang",
+    "day(s)": "hari",
     "Currency": "Mata Uang",
     "Account Code": "Kode Akun",
+    "Code": "Kode",
     "Exchange Rate": "Tingkat Tukar",
     "The provided credentials do not match our records.": "Kredensial yang diberikan tidak cocok dengan catatan kami",
     "Profile": "Profil",
@@ -107,6 +116,9 @@
     "Piece": "sekeping",
     "Work Order already confirmed": "Pesanan kerja sudah dikonfirmasi",
     "Express": "Ekspres",
+    "Express Price": "Harga Ekspres",
+    "Express Turnover": "Omset Ekspres",
+    "Description": "Deskripsi",
     "Explain": "Jelaskan",
     "write explaination here ...": "tulis penjelasan di sini ...",
     "Max 255 chars": "Maks 255 karakter",
@@ -125,7 +137,7 @@
     "See You Again": "Sampai Sampai Jumpa Lagi",
     "Powered By:": "Diberdayakan oleh:",
     "Attention": "Perhatian",
-    "1. Damage/fade/tear/shrinkage of clothing in the washing and drying process caused by the basic nature of the clothing material is not our responsibility, it is the consumer's risk": "1. Kerusakan/luntur/sobek/susut pakaian dalam proses pencucian dan pengeringan yang di sebabkan sifat dasar bahan pakaian bukan menjadi tanggung jawab kami,menjadi resiko konsumen",
+    "1. Damage/fade/tear/shrinkage of clothing in the washing and drying process caused by the basic nature of the clothing material is not our responsibility, it is the consumer risk": "1. Kerusakan/luntur/sobek/susut pakaian dalam proses pencucian dan pengeringan yang di sebabkan sifat dasar bahan pakaian bukan menjadi tanggung jawab kami,menjadi resiko konsumen",
     "2. The loss of valuables left in clothes is not our responsibility.": "2. Hilangnya benda berharga yang tertinggal didalam pakaian,bukan tanggung jawab kami.",
     "3. If the amount of clothing has been filled in accurately and correctly, then the amount we calculated is considered correct": "3. Bila jumlah pakaian telah di isi dengan tepat dan benar,maka jumlah yang kami hitung dianggap benar",
     "4. Complaints occur 1x24 hours after the laundry is picked up": "4. Pengaduan/komplain berlaku 1x24 jam setelah cucian diambil",
@@ -146,8 +158,19 @@
     "Tendered": "Ditender",
     "Change": "Perubahan",
     "Tax": "Pajak",
+    "Tax Rate": "Tingkat Pajak",
     "Discount": "Diskon",
     "Confirm": "Konfirmasi",
     "The amount is required.": "Jumlah diperlukan",
-    "The amount should not less than balance due.": "Jumlah tidak boleh kurang dari saldo yang harus dibayar"
+    "The amount should not less than balance due.": "Jumlah tidak boleh kurang dari saldo yang harus dibayar",
+    "The receipt displays a maximum of the first 14 digits of the name": "Kuitansi menampilkan maksimal 14 digit pertama dari nama",
+    "You can't delete yourself.": "Anda tidak dapat menghapus diri sendiri",
+    "Role": "Peran",
+    "Group": "Grup",
+    "Reset Password": "Reset Kata Sandi",
+    "This action is unauthorized.": "Tindakan ini tidak sah.",
+    "Category": "Kategori",
+    "From Currency": "Dari Mata Uang",
+    "To Currency": "Ke Mata Uang",
+    "Rate": "Tingkat"
 }
