wip, add CN language

--- a/lang/id.json
+++ b/lang/id.json
@@ -6,7 +6,8 @@
     "Password": "Kata sandi",
     "Remark": "Keterangan",
     "Welcome": "Selamat datang",
-    "System Login": "Login Sistem",
+    "System Login": "Log Masuk Sistem",
+    "Login": "Masuk",
     "Current shop": "Toko saat ini",
     "Home": "Beranda",
     "Ready for Pickup": "Sedia untuk Pickup",
@@ -22,6 +23,8 @@
     "Work Order": "Pesanan Kerja",
     "New": "Baru",
     "List": "Daftar",
+    "Start date": "Mulai tanggal",
+    "End date": "Tanggal berakhir",
     "Customer": "Pelanggan",
     "Choose Customer": "Pilih Pelanggan",
     "Choose": "Pilih",
@@ -87,12 +90,15 @@
     "Quantity": "Kuantitas",
     "SubTotal": "SubTotal",
     "Total": "Total",
+    "Pickup": "Ambil",
     "Payment": "Pembayaran",
     "Payments": "Pembayaran",
     "Payment Type": "Jenis Pembayaran",
     "Card No:": "Kartu No:",
     "-Card No:": "-Kartu No:",
     "Turnover": "Omset",
+    "Exp Prc": "Exp Prc",
+    "Exp TO": "Exp TO",
     "Location": "Lokasi",
     "Please choose a customer": "Silakan pilih pelanggan",
     "Please add at least one item": "Silakan tambahkan setidaknya satu item",
@@ -155,8 +161,10 @@
     "Com Port": "Com Port",
     "Download": "Unduh",
     "Balance Due": "Saldo yang harus dibayar",
-    "Tendered": "Ditender",
+    "Amount Tendered": "Jumlah yang ditawarkan",
     "Change": "Perubahan",
+    "Payment Method": "Metode Pembayaran",
+    "Pay Amount": "Jumlah Pembayaran",
     "Tax": "Pajak",
     "Tax Rate": "Tingkat Pajak",
     "Discount": "Diskon",
