wip, add chinese lang

--- a/lang/cn.json
+++ b/lang/cn.json
@@ -89,8 +89,11 @@
     "Price": "价格",
     "Quantity": "数量",
     "SubTotal": "小计",
-    "Pickup": "取货",
     "Total": "总计",
+    "Included:": "包括:",
+    "-Tax": "-税",
+    "-Discount": "-折扣",
+    "Pickup": "取货",
     "Payment": "付款",
     "Payments": "付款",
     "Payment Type": "付款类型",
@@ -140,7 +143,7 @@
     "Grand Total": "总计",
     "Collect Date:": "取回日期:",
     "Thank You": "谢谢",
-    "See You Again": "再见",
+    "See You Again": "期待您的再次惠顾",
     "Powered By:": "提供支持：",
     "Attention": "注意",
     "1. Damage/fade/tear/shrinkage of clothing in the washing and drying process caused by the basic nature of the clothing material is not our responsibility, it is the consumer risk": "1. 衣物在洗涤和干燥过程中由于衣物材料的基本性质造成的损坏/褪色/撕裂/缩水，不属于我们的责任，属于消费者的风险",
