--- a/lang/id.json
+++ b/lang/id.json
@@ -90,6 +90,9 @@
     "Quantity": "Kuantitas",
     "SubTotal": "SubTotal",
     "Total": "Total",
+    "Included:": "Termasuk:",
+    "-Tax": "-Pajak",
+    "-Discount": "-Diskon",
     "Pickup": "Ambil",
     "Payment": "Pembayaran",
     "Payments": "Pembayaran",
@@ -135,7 +138,7 @@
     "Job Status": "Status Pekerjaan",
     "Work Order Successfully Confirmed": "Pesanan Kerja Berhasil Dikonfirmasi",
     "WO Date:": "WO Tanggal:",
-    "Item Name": "Nama Item",
+    "Item Name": "Nama Barang",
     "Amount": "Jumlah",
     "Grand Total": "Keseluruhan Jumlah",
     "Collect Date:": "Tanggal Pengumpulan:",
