add yearly report and change some paragraphs of the receipt

--- a/lang/cn.json
+++ b/lang/cn.json
@@ -149,7 +149,7 @@
     "Attention": "注意",
     "1. Damage/fade/tear/shrinkage of clothing in the washing and drying process caused by the basic nature of the clothing material is not our responsibility, it is the consumer risk": "1. 衣物在洗涤和干燥过程中由于衣物材料的基本性质造成的损坏/褪色/撕裂/缩水，不属于我们的责任，属于消费者的风险",
     "2. The loss of valuables left in clothes is not our responsibility.": "2. 衣物中遗留的贵重物品的丢失不属于我们的责任",
-    "3. If the amount of clothing has been filled in accurately and correctly, then the amount we calculated is considered correct": "3. 如果衣物数量已准确无误地填写，那么我们计算的数量被视为正确",
+    "3. If any of the clothing fades, consumers MUST inform us; if not, then if fading occurs, it is not our responsibility.": "3. 如果衣物有任何褪色，消费者必须通知我们；否则如果发生褪色，我们不承担任何责任",
     "4. Complaints occur 1x24 hours after the laundry is picked up": "4. 投诉在取回洗衣物后1x24小时内有效",
     "You can only collect 4pickup work orders.": "您只能取回4pickup工单",
     "Work Order Items data did not updated.": "工单项目数据未更新",
@@ -188,13 +188,16 @@
     "Report": "报表",
     "Daily": "每日",
     "Monthly": "每月",
+    "Yearly": "每年",
     "Daily Report": "每日报表",
     "Monthly Report": "每月报表",
+    "Yearly Report": "每年报表",
     "Report date": "报表日期",
     "Query": "查询",
     "Date": "日期",
     "End date cannot be before start date.": "结束日期不能早于开始日期",
     "Duration cannot be more than 1 month.": "持续时间不能超过1个月",
+    "Duration cannot be more than 1 year.": "持续时间不能超过1年",
     "Topup": "充值",
     "Transaction Number": "交易编号",
     "Reversal": "冲正",
