--- a/lang/id.json
+++ b/lang/id.json
@@ -149,7 +149,7 @@
     "Attention": "Perhatian",
     "1. Damage/fade/tear/shrinkage of clothing in the washing and drying process caused by the basic nature of the clothing material is not our responsibility, it is the consumer risk": "1. Kerusakan/luntur/sobek/susut pakaian dalam proses pencucian dan pengeringan yang di sebabkan sifat dasar bahan pakaian bukan menjadi tanggung jawab kami,menjadi resiko konsumen",
     "2. The loss of valuables left in clothes is not our responsibility.": "2. Hilangnya benda berharga yang tertinggal didalam pakaian,bukan tanggung jawab kami.",
-    "3. If the amount of clothing has been filled in accurately and correctly, then the amount we calculated is considered correct": "3. Bila jumlah pakaian telah di isi dengan tepat dan benar,maka jumlah yang kami hitung dianggap benar",
+    "3. If any of the clothing fades, consumers MUST inform us; if not, then if fading occurs, it is not our responsibility.": "3. Jika ada salah satu pakaian yang luntur konsumen WAJIB memberitahu kepada kami,jika tidak,maka jika terjadi kelunturan bukan tanggung jawab kami.",
     "4. Complaints occur 1x24 hours after the laundry is picked up": "4. Pengaduan/komplain berlaku 1x24 jam setelah cucian diambil",
     "You can only collect 4pickup work orders.": "Anda hanya dapat mengumpulkan 4 pesanan kerja pickup.",
     "Work Order Items data did not updated.": "Data item pesanan kerja tidak diperbarui.",
@@ -188,13 +188,16 @@
     "Report": "Laporan",
     "Daily": "Harian",
     "Monthly": "Bulanan",
+    "Yearly": "Tahunan",
     "Daily Report": "Laporan Harian",
     "Monthly Report": "Laporan Bulanan",
+    "Yearly Report": "Laporan Tahunan",
     "Report date": "Tanggal Laporan",
     "Query": "Kueri",
     "Date": "Tanggal",
     "End date cannot be before start date.": "Tanggal akhir tidak boleh sebelum tanggal mulai.",
     "Duration cannot be more than 1 month.": "Durasi tidak boleh lebih dari 1 bulan.",
+    "Duration cannot be more than 1 year.": "Durasi tidak boleh lebih dari 1 tahun.",
     "Topup": "Topup",
     "Transaction Number": "Nomor Transaksi",
     "Reversal": "Pembalikan",
