wip, add customer report and README correction

--- a/lang/cn.json
+++ b/lang/cn.json
@@ -141,6 +141,7 @@
     "WO Date:": "工单日期:",
     "Item Name": "项目名称",
     "Amount": "数量",
+    "Average Transaction Value": "客单价",
     "Grand Total": "总计",
     "Collect Date:": "取回日期:",
     "Thank You": "谢谢",
@@ -192,6 +193,7 @@
     "Daily Report": "每日报表",
     "Monthly Report": "每月报表",
     "Yearly Report": "每年报表",
+    "Customer Report": "客户报表",
     "Report date": "报表日期",
     "Query": "查询",
     "Date": "日期",
