--- a/lang/id.json
+++ b/lang/id.json
@@ -141,6 +141,7 @@
     "WO Date:": "WO Tanggal:",
     "Item Name": "Nama Barang",
     "Amount": "Jumlah",
+    "Average Transaction Value": "Nilai Transaksi Rata-rata",
     "Grand Total": "Keseluruhan Jumlah",
     "Collect Date:": "Tanggal Pengumpulan:",
     "Thank You": "Terima Kasih",
@@ -192,6 +193,7 @@
     "Daily Report": "Laporan Harian",
     "Monthly Report": "Laporan Bulanan",
     "Yearly Report": "Laporan Tahunan",
+    "Customer Report": "Laporan Pelanggan",
     "Report date": "Tanggal Laporan",
     "Query": "Kueri",
     "Date": "Tanggal",
