wip, fixing workorder item removal and topup receipt generation

--- a/lang/cn.json
+++ b/lang/cn.json
@@ -90,6 +90,9 @@
     "Remove All": "全部移除",
     "Change status to 4pickup": "将状态更改为 4pickup",
     "New Item": "新物品",
+    "Item removed": "物品已移除",
+    "Please choose a customer before adding items.": "请在添加物品前选择客户",
+    "Cannot change customer after adding items": "添加物品后无法更改客户",
     "Select Product": "选择产品",
     "Barcode": "条形码",
     "Unit": "单位",
