--- a/lang/id.json
+++ b/lang/id.json
@@ -90,6 +90,9 @@
     "Remove All": "Hapus Semua",
     "Change status to 4pickup": "Ubah status menjadi 4pickup",
     "New Item": "Barang Baru",
+    "Item removed": "Item dihapus",
+    "Please choose a customer before adding items.": "Silakan pilih pelanggan sebelum menambahkan item.",
+    "Cannot change customer after adding items": "Tidak dapat mengubah pelanggan setelah menambahkan item",
     "Select Product": "Pilih Produk",
     "Barcode": "Barcode",
     "Unit": "Unit",
